--- a/cbx-qt-pro-stub/samp2_4/qwmainwind.ui
+++ b/cbx-qt-pro-stub/samp2_4/qwmainwind.ui
@@ -6,37 +6,84 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>711</width>
+    <height>463</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>QWMainWind</string>
   </property>
-  <widget class="QWidget" name="centralWidget"/>
+  <widget class="QWidget" name="centralWidget">
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QTextEdit" name="textEdit"/>
+    </item>
+   </layout>
+  </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>400</width>
+     <width>711</width>
      <height>28</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menufile">
+    <property name="title">
+     <string>file</string>
+    </property>
+    <addaction name="actionNew"/>
+    <addaction name="actionOpen"/>
+    <addaction name="actionClose"/>
+   </widget>
+   <widget class="QMenu" name="menuedit">
+    <property name="title">
+     <string>edit</string>
+    </property>
+    <addaction name="actionCut"/>
+    <addaction name="actionCopy"/>
+    <addaction name="actionPaste"/>
+    <addaction name="actionClear"/>
+   </widget>
+   <widget class="QMenu" name="menufont">
+    <property name="title">
+     <string>font</string>
+    </property>
+    <addaction name="actionBold"/>
+    <addaction name="actionItalic"/>
+    <addaction name="separator"/>
+    <addaction name="actionUnder"/>
+    <addaction name="separator"/>
+    <addaction name="separator"/>
+    <addaction name="actionToolbarLab"/>
+   </widget>
+   <addaction name="menufile"/>
+   <addaction name="menuedit"/>
+   <addaction name="menufont"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
+   <property name="toolButtonStyle">
+    <enum>Qt::ToolButtonTextUnderIcon</enum>
+   </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
    </attribute>
    <attribute name="toolBarBreak">
-    <bool>false</bool>
+    <bool>true</bool>
    </attribute>
+   <addaction name="actionCut"/>
+   <addaction name="actionCopy"/>
+   <addaction name="actionPaste"/>
+   <addaction name="actionBold"/>
+   <addaction name="actionItalic"/>
+   <addaction name="actionUnder"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionCut">
    <property name="icon">
     <iconset>
-     <normaloff>剪切.png</normaloff>剪切.png</iconset>
+     <normaloff>cut.png</normaloff>cut.png</iconset>
    </property>
    <property name="text">
     <string>Cut</string>
@@ -51,7 +98,7 @@
   <action name="actionCopy">
    <property name="icon">
     <iconset>
-     <normaloff>复制.png</normaloff>复制.png</iconset>
+     <normaloff>copy.png</normaloff>copy.png</iconset>
    </property>
    <property name="text">
     <string>Copy</string>
@@ -66,7 +113,7 @@
   <action name="actionPaste">
    <property name="icon">
     <iconset>
-     <normaloff>粘贴.png</normaloff>粘贴.png</iconset>
+     <normaloff>paste.png</normaloff>paste.png</iconset>
    </property>
    <property name="text">
     <string>Paste</string>
@@ -81,7 +128,7 @@
   <action name="actionBold">
    <property name="icon">
     <iconset>
-     <normaloff>粗体.png</normaloff>粗体.png</iconset>
+     <normaloff>bold.png</normaloff>bold.png</iconset>
    </property>
    <property name="text">
     <string>Bold</string>
@@ -93,7 +140,7 @@
   <action name="actionItalic">
    <property name="icon">
     <iconset>
-     <normaloff>斜体.png</normaloff>斜体.png</iconset>
+     <normaloff>Italics.png</normaloff>Italics.png</iconset>
    </property>
    <property name="text">
     <string>Italic</string>
@@ -105,7 +152,7 @@
   <action name="actionUnder">
    <property name="icon">
     <iconset>
-     <normaloff>下划线.png</normaloff>下划线.png</iconset>
+     <normaloff>Underline.png</normaloff>Underline.png</iconset>
    </property>
    <property name="text">
     <string>Under</string>
@@ -117,7 +164,7 @@
   <action name="actionClose">
    <property name="icon">
     <iconset>
-     <normaloff>退出.png</normaloff>退出.png</iconset>
+     <normaloff>exit.png</normaloff>exit.png</iconset>
    </property>
    <property name="text">
     <string>Close</string>
@@ -129,7 +176,7 @@
   <action name="actionOpen">
    <property name="icon">
     <iconset>
-     <normaloff>打开信息.png</normaloff>打开信息.png</iconset>
+     <normaloff>open.png</normaloff>open.png</iconset>
    </property>
    <property name="text">
     <string>Open</string>
@@ -144,7 +191,7 @@
   <action name="actionClear">
    <property name="icon">
     <iconset>
-     <normaloff>清空.png</normaloff>清空.png</iconset>
+     <normaloff>clear.png</normaloff>clear.png</iconset>
    </property>
    <property name="text">
     <string>Clear</string>
@@ -156,7 +203,7 @@
   <action name="actionFont">
    <property name="icon">
     <iconset>
-     <normaloff>字体.png</normaloff>字体.png</iconset>
+     <normaloff>Typeface.png</normaloff>Typeface.png</iconset>
    </property>
    <property name="text">
     <string>Font</string>
@@ -168,7 +215,7 @@
   <action name="actionNew">
    <property name="icon">
     <iconset>
-     <normaloff>新建.png</normaloff>新建.png</iconset>
+     <normaloff>file1.png</normaloff>file1.png</iconset>
    </property>
    <property name="text">
     <string>New</string>
@@ -183,7 +230,7 @@
   <action name="actionToolbarLab">
    <property name="icon">
     <iconset>
-     <normaloff>显示.png</normaloff>显示.png</iconset>
+     <normaloff>daohang.png</normaloff>daohang.png</iconset>
    </property>
    <property name="text">
     <string>ToolbarLab</string>
