--- a/cbx-qt-pro-stub/samp2_4/res.qrc
+++ b/cbx-qt-pro-stub/samp2_4/res.qrc
@@ -1,20 +1,19 @@
 <RCC>
     <qresource prefix="/images">
-        <file>文件.png</file>
-        <file>粘贴.png</file>
-        <file>复制.png</file>
-        <file>打开信息.png</file>
-        <file>文档.png</file>
-        <file>钻石.png</file>
-        <file>男人.png</file>
-        <file>剪切.png</file>
-        <file>粗体.png</file>
-        <file>显示.png</file>
-        <file>新建.png</file>
-        <file>字体.png</file>
-        <file>清空.png</file>
-        <file>下划线.png</file>
-        <file>斜体.png</file>
-        <file>退出.png</file>
+        <file>file.png</file>
+        <file>paste.png</file>
+        <file>copy.png</file>
+        <file>open.png</file>
+        <file>file1.png</file>
+        <file>vip.png</file>
+        <file>cut.png</file>
+        <file>bold.png</file>
+        <file>display.png</file>
+        <file>clear.png</file>
+        <file>Typeface.png</file>
+        <file>Underline.png</file>
+        <file>Italics.png</file>
+        <file>exit.png</file>
+        <file>daohang.png</file>
     </qresource>
 </RCC>
