--- a/cbx-qt-pro-stub/samp2_4/qwmainwind.ui
+++ b/cbx-qt-pro-stub/samp2_4/qwmainwind.ui
@@ -64,13 +64,13 @@
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <property name="toolButtonStyle">
-    <enum>Qt::ToolButtonTextUnderIcon</enum>
+    <enum>Qt::ToolButtonIconOnly</enum>
    </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
    </attribute>
    <attribute name="toolBarBreak">
-    <bool>true</bool>
+    <bool>false</bool>
    </attribute>
    <addaction name="actionCut"/>
    <addaction name="actionCopy"/>
@@ -81,9 +81,12 @@
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionCut">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
    <property name="icon">
-    <iconset>
-     <normaloff>cut.png</normaloff>cut.png</iconset>
+    <iconset resource="res.qrc">
+     <normaloff>:/images/cut.bmp</normaloff>:/images/cut.bmp</iconset>
    </property>
    <property name="text">
     <string>Cut</string>
@@ -97,8 +100,8 @@
   </action>
   <action name="actionCopy">
    <property name="icon">
-    <iconset>
-     <normaloff>copy.png</normaloff>copy.png</iconset>
+    <iconset resource="res.qrc">
+     <normaloff>:/images/120.bmp</normaloff>:/images/120.bmp</iconset>
    </property>
    <property name="text">
     <string>Copy</string>
@@ -112,8 +115,8 @@
   </action>
   <action name="actionPaste">
    <property name="icon">
-    <iconset>
-     <normaloff>paste.png</normaloff>paste.png</iconset>
+    <iconset resource="res.qrc">
+     <normaloff>:/images/paste.bmp</normaloff>:/images/paste.bmp</iconset>
    </property>
    <property name="text">
     <string>Paste</string>
@@ -127,8 +130,8 @@
   </action>
   <action name="actionBold">
    <property name="icon">
-    <iconset>
-     <normaloff>bold.png</normaloff>bold.png</iconset>
+    <iconset resource="res.qrc">
+     <normaloff>:/images/BLD.BMP</normaloff>:/images/BLD.BMP</iconset>
    </property>
    <property name="text">
     <string>Bold</string>
@@ -139,8 +142,8 @@
   </action>
   <action name="actionItalic">
    <property name="icon">
-    <iconset>
-     <normaloff>Italics.png</normaloff>Italics.png</iconset>
+    <iconset resource="res.qrc">
+     <normaloff>:/images/ITL.BMP</normaloff>:/images/ITL.BMP</iconset>
    </property>
    <property name="text">
     <string>Italic</string>
@@ -151,8 +154,8 @@
   </action>
   <action name="actionUnder">
    <property name="icon">
-    <iconset>
-     <normaloff>Underline.png</normaloff>Underline.png</iconset>
+    <iconset resource="res.qrc">
+     <normaloff>:/images/DBLUNDR.BMP</normaloff>:/images/DBLUNDR.BMP</iconset>
    </property>
    <property name="text">
     <string>Under</string>
@@ -163,8 +166,8 @@
   </action>
   <action name="actionClose">
    <property name="icon">
-    <iconset>
-     <normaloff>exit.png</normaloff>exit.png</iconset>
+    <iconset resource="res.qrc">
+     <normaloff>:/images/exit.bmp</normaloff>:/images/exit.bmp</iconset>
    </property>
    <property name="text">
     <string>Close</string>
@@ -175,8 +178,8 @@
   </action>
   <action name="actionOpen">
    <property name="icon">
-    <iconset>
-     <normaloff>open.png</normaloff>open.png</iconset>
+    <iconset resource="res.qrc">
+     <normaloff>:/images/open3.bmp</normaloff>:/images/open3.bmp</iconset>
    </property>
    <property name="text">
     <string>Open</string>
@@ -190,8 +193,8 @@
   </action>
   <action name="actionClear">
    <property name="icon">
-    <iconset>
-     <normaloff>clear.png</normaloff>clear.png</iconset>
+    <iconset resource="res.qrc">
+     <normaloff>:/images/103.bmp</normaloff>:/images/103.bmp</iconset>
    </property>
    <property name="text">
     <string>Clear</string>
@@ -202,8 +205,8 @@
   </action>
   <action name="actionFont">
    <property name="icon">
-    <iconset>
-     <normaloff>Typeface.png</normaloff>Typeface.png</iconset>
+    <iconset resource="res.qrc">
+     <normaloff>:/images/20.ico</normaloff>:/images/20.ico</iconset>
    </property>
    <property name="text">
     <string>Font</string>
@@ -214,8 +217,8 @@
   </action>
   <action name="actionNew">
    <property name="icon">
-    <iconset>
-     <normaloff>file1.png</normaloff>file1.png</iconset>
+    <iconset resource="res.qrc">
+     <normaloff>:/images/new2.bmp</normaloff>:/images/new2.bmp</iconset>
    </property>
    <property name="text">
     <string>New</string>
@@ -229,8 +232,8 @@
   </action>
   <action name="actionToolbarLab">
    <property name="icon">
-    <iconset>
-     <normaloff>daohang.png</normaloff>daohang.png</iconset>
+    <iconset resource="res.qrc">
+     <normaloff>:/images/430.bmp</normaloff>:/images/430.bmp</iconset>
    </property>
    <property name="text">
     <string>ToolbarLab</string>
@@ -241,6 +244,89 @@
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
- <connections/>
+ <resources>
+  <include location="res.qrc"/>
+ </resources>
+ <connections>
+  <connection>
+   <sender>actionPaste</sender>
+   <signal>triggered()</signal>
+   <receiver>textEdit</receiver>
+   <slot>paste()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>355</x>
+     <y>253</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionCut</sender>
+   <signal>triggered()</signal>
+   <receiver>textEdit</receiver>
+   <slot>cut()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>355</x>
+     <y>253</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionCopy</sender>
+   <signal>triggered()</signal>
+   <receiver>textEdit</receiver>
+   <slot>copy()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>355</x>
+     <y>253</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionClose</sender>
+   <signal>triggered()</signal>
+   <receiver>QWMainWind</receiver>
+   <slot>close()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>355</x>
+     <y>231</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionClear</sender>
+   <signal>triggered()</signal>
+   <receiver>textEdit</receiver>
+   <slot>clear()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>355</x>
+     <y>253</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
